k8s/infra/traefik/traefik-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: infra

spec:
  basicAuth:
    secret: traefik-dashboard-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: infra

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.storystream.nl`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: infra
      services:
        - name: api@internal
          kind: TraefikService
